--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,8 @@ requests==2.31.0
 urllib3==2.0.5
 beautifulsoup4==4.12.2
 colorama==0.4.6
-Flask
-flask-cors
-aiohttp
-aiocache
-asyncio
-functools==3.9.7
+Flask==2.2.5
+flask-cors==4.0.0
+aiohttp==3.8.6
+aiocache==0.12.2
+asyncio==3.4.3
