--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ requests==2.31.0
 urllib3==2.0.5
 beautifulsoup4==4.12.2
 colorama==0.4.6
-Flask==2.2.5
+Flask[async]==2.2.5
 flask-cors==4.0.0
 aiohttp==3.8.6
 aiocache==0.12.2
